--- a/pom.xml
+++ b/pom.xml
@@ -105,20 +105,17 @@
             </executions>
         </plugin>
 		</plugins>
-
-	
 	</build>
 
-		<distributionManagement>
+	<distributionManagement>
         <repository>
            <id>maven-releases</id>
-           <url>http://18.212.242.13:8081/repository/maven-snapshots/</url>
-	</repository>
-       <snapshotsRepository>
+           <url>http://18.212.242.13:8081/repository/maven-releases/</url>
+		</repository>
+       <snapshotRepository>
            <id>maven-snapshots</id>
            <url>http://18.212.242.13:8081/repository/maven-snapshots/</url>
-       </snapshotsRepository>
-
+       </snapshotRepository>
     </distributionManagement>
 
 </project>
